--- a/UserScreen.html
+++ b/UserScreen.html
@@ -17,11 +17,9 @@
 	</div> 
 	<div id="menu">
 		<ul><center>
-	  <li><a href="{% url 'index' %}">Home</a></li>
-      <li><a href="{% url 'UserLogin' %}">User Login</a></li>
-	  <li><a href="{% url 'Signup' %}">New User Signup</a></li>
-	  <li><a href="{% url 'Aboutus' %}">About Us</a></li>
-	 		
+		<li><a href="{% url 'TrainYolo' %}">Train YoloV7 Algorithm</a></li>
+	  <li><a href="{% url 'DetectTraffic' %}">Traffic Surveillance from Video</a></li>
+	  <li><a href="{% url 'index' %}">Logout</a></li>		
 		</center></ul>
 		<br class="clearfix" />
 	</div>
@@ -29,9 +27,8 @@
 		<img class="pic" src="{% static 'images/investor.jpg' %}" width="870" height="230" alt="" />
 	</div>
 	<br/>
-	<p align="justify"><font size="3" style="font-family: Comic Sans MS" color="black"><center>
-		Real-time Traffic Surveillance and Detection using Deep Learning and Computer Vision Techniques
+	<font size="" color="black"><center>{{ data|safe }}</center></font>
 
-</p>
+	
 </body>
 </html>
